# LLMs-e-Agentes-de-IA

./: .gitignore  .pdm-python  01_💬_Projeto_RAG.py  02_🧲_Gerador_de_Conteudo.py  03_👨‍🎓_Gerador_de_Exercicios.py  04_💵_Assistente_Financeiro.py  Dockerfile  README.md  app.py  pyproject.toml  relatorio_local.md  requirements.txt  style.css
.streamlit/: config.toml
Projects/: 01_💬_Projeto_RAG.py
functions_and_documents/Assistente_Fincaneiro/: README.md  functions.py
functions_and_documents/Gerador_de_Conteudo/: README.md  functions.py
functions_and_documents/Gerador_de_exercicios/: README.md  functions.py
functions_and_documents/ProjetoRAG/: README.md  functions.py
functions_and_documents/index_ps5/: index.faiss  index.pkl
functions_and_documents/index_safebank/: index.faiss  index.pkl
src/Solucoes_com_LLMs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
